# Mirror

./: README.md  mirror-config.json  pyproject.toml
core/: __init__.py  ai_adapter.py  commitment.py  conversation.py  next_step.py  rights_mapper.py  template_engine.py  timeline.py
docs/: CONTRIBUTING.md  SECURITY.md  user_guide.md
prompts/: master-system.md
templates/: assistive_technology_complaint.txt  audiology_decision_challenge.txt  chargeback_request.txt  complaint_overdue.txt  consumer_complaint.txt  council_referral.txt  credit_dispute.txt  credit_report_request.txt  device_data_access_request.txt  dispute_response.txt  foi_overdue.txt  foi_request.txt  fos_complaint.txt  generic_complaint.txt  generic_escalation.txt  grievance_letter.txt  ico_complaint.txt  immigration_appeal.txt  immigration_appeal_prep.txt  landlord_complaint.txt  mandatory_reconsideration.txt  medical_device_access_request.txt  mr_deadline_warning.txt  nhs_complaint.txt  ombudsman_referral.txt  phso_referral.txt  platform_complaint.txt  reasonable_adjustment_request.txt  sar_overdue.txt  sar_request.txt  tribunal_appeal.txt  tribunal_deadline_warning.txt  trusted_contact_authority.txt
tests/: __init__.py  test_ai_adapter.py  test_commitment.py  test_conversation.py  test_next_step.py  test_rights_mapper.py  test_template_engine.py  test_timeline.py
web/: index.html  style.css
